clusters/production/miniflux/middleware-tailscale.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-ipallowlist
  namespace: miniflux
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10
      - fd7a:115c:a1e0::/48
      - 127.0.0.1/32
