clusters/production/miniflux/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    name: miniflux
    owner: platform
